# computer_architecture_labs

lab2/: CMakeLists.txt  Makefile  build.ninja  build.ninja (from CMake)
lab2/include/: calculator.h
lab2/src/: calculator.cpp  main.cpp
lab3/: Makefile  README.md
lab3/include/: command_line.h  command_rules.h  execute_command.h  key_executor.h  syntax_check.h
lab3/src/: command_line.cpp  command_rules.cpp  execute_command.cpp  key_executor.cpp  main.cpp  syntax_check.cpp
lab4/: README.md
lab5/: Makefile  README.md  hello1.c  hello2.c
lab5/inc/: hello1.h
lab6/: Makefile  README.md  hello1.c  hello2.c
